--- a/jag-crdp-application/pom.xml
+++ b/jag-crdp-application/pom.xml
@@ -189,6 +189,16 @@
             <version>5.3.14</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.6.8</version>
+        </dependency>
     </dependencies>
 
     <build>
