--- a/jag-crdp-application/pom.xml
+++ b/jag-crdp-application/pom.xml
@@ -254,6 +254,10 @@
                 <configuration>
                     <excludes>
                         <exclude>**/configuration/WSDLFilter*</exclude>
+                        <exclude>**/configuration/MyBasicAuthenticationEntryPoint*</exclude>
+                        <exclude>**/configuration/SecurityConfig*</exclude>
+                        <exclude>**/configuration/MailConfig*</exclude>
+                        <exclude>**/configuration/SoapConfig*</exclude>
                         <exclude>**/configuration/HttpServletRequestWrapper.class</exclude>
                         <exclude>**/CrdpApplication.class</exclude>
                         <exclude>**/ObjectFactory.class</exclude>
