--- a/jag-crdp-transmit-models/pom.xml
+++ b/jag-crdp-transmit-models/pom.xml
@@ -9,19 +9,22 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jag-crdp-transmit-transformer</artifactId>
-    <dependencies>
-        <dependency>
-            <groupId>ca.bc.gov.open</groupId>
-            <artifactId>jag-crdp-common-models</artifactId>
-            <version>1.0.0</version>
-            <scope>compile</scope>
-        </dependency>
-    </dependencies>
+    <artifactId>jag-crdp-transmit-models</artifactId>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.ws</groupId>
+            <artifactId>spring-ws-core</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
