--- a/jag-crdp-transmit-sender/pom.xml
+++ b/jag-crdp-transmit-sender/pom.xml
@@ -202,6 +202,12 @@
             <version>1.0.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ca.bc.gov.open</groupId>
+            <artifactId>spring-sftp-starter</artifactId>
+            <version>0.2.2</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
