--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       - name: Maven Package
         run: mvn -ntp clean package -Dmaven.test.skip=true
 
-      - name: Maven Verify
-        run: mvn -ntp clean verify
+      #- name: Maven Verify
+      #  run: mvn -ntp clean verify
 
       - name: Maven Spotless Check
         run: mvn -ntp spotless:check
