--- a/jag-crdp-transmit-receiver/src/main/resources/application.yml
+++ b/jag-crdp-transmit-receiver/src/main/resources/application.yml
@@ -6,10 +6,6 @@ crdp:
   host: ${ORDS_HOST}
   in-file-dir: ${INCOMING_FILE_DIR}
   out-file-dir: ${OUTGOING_FILE_DIR}
-  notification-addresses: ${NOTIFICATION_ADDR}
-  smtp-from: ${SMTP_FROM}
-  smtp-username: ${SMTP_USERNAME}
-  smtp-password: ${SMTP_PASSWORD}
   cron-job-incomming-file:  ${CRON_JOB_INCOMMING_FILE}
   cron-job-outgoing-file:  ${CRON_JOB_OUTGOING_FILE}
   rabbitmq:
@@ -22,6 +18,12 @@ spring:
   rabbitmq:
     host: ${RABBIT_MQ_HOST}
     port: 5672
+
+bcgov:
+  mail-it:
+    base-path: ${MAIL_IT_BASE_PATH:http://localhost:8099}
+    from-email: ${MAIL_IT_FROM_EMAIL}
+    default-email: ${MAIL_IT_DEFAULT_EMAIL}
 
 management:
   endpoints:
