--- a/jag-crdp-process-receiver/pom.xml
+++ b/jag-crdp-process-receiver/pom.xml
@@ -213,6 +213,12 @@
             <artifactId>spring-rabbit-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>ca.bc.gov.open</groupId>
+            <artifactId>crdp-mail-it</artifactId>
+            <version>0.0.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
