--- a/jag-crdp-transmit-sender/pom.xml
+++ b/jag-crdp-transmit-sender/pom.xml
@@ -192,11 +192,6 @@
             <version>2.11.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-mail</artifactId>
-            <version>2.6.8</version>
-        </dependency>
-        <dependency>
             <groupId>ca.bc.gov.open</groupId>
             <artifactId>jag-crdp-process-receiver</artifactId>
             <version>1.0.0</version>
@@ -204,7 +199,7 @@
         </dependency>
         <dependency>
             <groupId>ca.bc.gov.open</groupId>
-            <artifactId>spring-sftp-starter</artifactId>
+            <artifactId>crdp-sftp-starter</artifactId>
             <version>0.2.2</version>
             <scope>compile</scope>
         </dependency>
