--- a/pom.xml
+++ b/pom.xml
@@ -26,14 +26,70 @@
         </repository>
     </repositories>
 
-    <modules>
-        <module>jag-crdp-transmit-receiver</module>
-        <module>jag-crdp-transmit-sender</module>
-        <module>jag-crdp-process-receiver</module>
-        <module>jag-crdp-common-models</module>
-        <module>jag-crdp-transmit-models</module>
-        <module>crdp-code-coverage</module>
-    </modules>
+    <profiles>
+        <profile>
+            <id>libs</id>
+            <modules>
+                <module>libs/crdp-starters-bom</module>
+                <module>libs/crdp-sftp-starter</module>
+                <module>libs/crdp-mail-it</module>
+            </modules>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>3.1.1</version>
+                        <configuration>
+                            <show>private</show>
+                            <nohelp>true</nohelp>
+                            <doclint>none</doclint>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>aggregate</id>
+                                <goals>
+                                    <goal>aggregate</goal>
+                                </goals>
+                                <phase>site</phase>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>transmit-receiver</id>
+            <modules>
+                <module>libs/crdp-mail-it</module>
+                <module>jag-crdp-transmit-receiver</module>
+                <module>jag-crdp-transmit-models</module>
+                <module>jag-crdp-common-models</module>
+                <module>crdp-code-coverage</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>transmit-sender</id>
+            <modules>
+                <module>libs/crdp-starters-bom</module>
+                <module>libs/crdp-sftp-starter</module>
+                <module>libs/crdp-mail-it</module>
+                <module>jag-crdp-transmit-sender</module>
+                <module>jag-crdp-transmit-models</module>
+                <module>jag-crdp-common-models</module>
+                <module>crdp-code-coverage</module>
+            </modules>
+        </profile>
+        <profile>
+            <id>process-receiver</id>
+            <modules>
+                <module>libs/crdp-mail-it</module>
+                <module>jag-crdp-process-receiver</module>
+                <module>jag-crdp-common-models</module>
+                <module>crdp-code-coverage</module>
+            </modules>
+        </profile>
+    </profiles>
 
     <build>
         <plugins>
