process models and process scanner

--- a/jag-crdp-process-scanner/pom.xml
+++ b/jag-crdp-process-scanner/pom.xml
@@ -10,7 +10,7 @@
 
     <artifactId>jag-crdp-process-scanner</artifactId>
     <version>1.0.0</version>
-    <name>jag-crdp-process-receiver</name>
+    <name>jag-crdp-process-scanner</name>
     <properties>
         <java.version>11</java.version>
         <log4j2.version>2.17.1</log4j2.version>
@@ -28,6 +28,12 @@
         <dependency>
             <groupId>ca.bc.gov.open</groupId>
             <artifactId>jag-crdp-common-models</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ca.bc.gov.open</groupId>
+            <artifactId>jag-crdp-process-models</artifactId>
             <version>1.0.0</version>
             <scope>compile</scope>
         </dependency>
