--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,18 @@
         </repository>
     </repositories>
 
+    <modules>
+        <module>libs/crdp-starters-bom</module>
+        <module>libs/crdp-sftp-starter</module>
+        <module>jag-crdp-process-scanner</module>
+        <module>jag-crdp-process-models</module>
+        <module>jag-crdp-transmit-receiver</module>
+        <module>jag-crdp-transmit-sender</module>
+        <module>jag-crdp-transmit-models</module>
+        <module>jag-crdp-common-models</module>
+        <module>crdp-code-coverage</module>
+    </modules>
+
     <profiles>
         <profile>
             <id>libs</id>
