--- a/jag-crdp-process-transformer/pom.xml
+++ b/jag-crdp-process-transformer/pom.xml
@@ -271,10 +271,9 @@
                         <exclude>**/configuration/WSDLFilter*</exclude>
                         <exclude>**/configuration/MyBasicAuthenticationEntryPoint*</exclude>
                         <exclude>**/configuration/SecurityConfig*</exclude>
-                        <exclude>**/configuration/MailConfig*</exclude>
                         <exclude>**/configuration/SoapConfig*</exclude>
                         <exclude>**/configuration/HttpServletRequestWrapper.class</exclude>
-                        <exclude>**/CrdpApplication.class</exclude>
+                        <exclude>**/ProcessTransformerApplication.class</exclude>
                         <exclude>**/ObjectFactory.class</exclude>
                         <exclude>**/Adapter1.class</exclude>
                     </excludes>
