--- a/jag-crdp-transmit-sender/pom.xml
+++ b/jag-crdp-transmit-sender/pom.xml
@@ -254,10 +254,9 @@
                         <exclude>**/configuration/WSDLFilter*</exclude>
                         <exclude>**/configuration/MyBasicAuthenticationEntryPoint*</exclude>
                         <exclude>**/configuration/SecurityConfig*</exclude>
-                        <exclude>**/configuration/MailConfig*</exclude>
                         <exclude>**/configuration/SoapConfig*</exclude>
                         <exclude>**/configuration/HttpServletRequestWrapper.class</exclude>
-                        <exclude>**/CrdpApplication.class</exclude>
+                        <exclude>**/TransmitSenderApplication.class</exclude>
                         <exclude>**/ObjectFactory.class</exclude>
                         <exclude>**/Adapter1.class</exclude>
                     </excludes>
