--- a/jag-crdp-process-scanner/src/main/resources/application.yml
+++ b/jag-crdp-process-scanner/src/main/resources/application.yml
@@ -5,6 +5,7 @@ security:
 crdp:
   in-file-dir: ${INCOMING_FILE_DIR}
   in-progress-dir: ${IN_PROGRESS_DIR}
+  record-ttl-hour: ${RECORD_TTL_HOUR}
   cron-job-incoming-file: ${CRON_JOB_INCOMING_FILE}
   rabbitmq:
     scanner-queue: ${SCANNER_QUEUE_NAME}
