--- a/jag-crdp-transmit-sender/pom.xml
+++ b/jag-crdp-transmit-sender/pom.xml
@@ -200,7 +200,7 @@
     </dependencies>
 
     <build>
-        <finalName>jag-crdp-application</finalName>
+        <finalName>jag-crdp-transmit-sender</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
