--- a/libs/crdp-starters-bom/pom.xml
+++ b/libs/crdp-starters-bom/pom.xml
@@ -18,6 +18,39 @@
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
         <fi.solita.clamav>1.0.1</fi.solita.clamav>
         <log4j2.version>2.17.1</log4j2.version>
+        <xmlschema-core.version>2.2.5</xmlschema-core.version>
+        <xmlschema.version>1.4.7</xmlschema.version>
+        <spring.actuator.version>2.7.5</spring.actuator.version>
+        <spring.security.version>2.7.5</spring.security.version>
+        <spring.validation.version>2.7.5</spring.validation.version>
+        <spring.ws.test.version>3.1.2</spring.ws.test.version>
+        <spring.devtools.version>2.7.5</spring.devtools.version>
+        <spring.configuration.processor.version>2.7.5</spring.configuration.processor.version>
+        <lombok.version>1.18.24</lombok.version>
+        <spring.starter.test.version>2.7.5</spring.starter.test.version>
+        <spring.security.test.version>5.7.3</spring.security.test.version>
+        <spring.logging.version>2.7.5</spring.logging.version>
+        <jackson.datatype.jsr310.version>2.13.4</jackson.datatype.jsr310.version>
+        <splunk.javalogging.version>1.11.1</splunk.javalogging.version>
+        <logback.classic.version>1.2.11</logback.classic.version>
+        <logback.core.version>1.2.11</logback.core.version>
+        <spring.starter.web.version>2.7.5</spring.starter.web.version>
+        <spring.starter.web-services.version>2.7.4</spring.starter.web-services.version>
+        <wsdl4j.version>1.6.3</wsdl4j.version>
+        <jaxb-runtime.version>4.0.1</jaxb-runtime.version>
+        <okhttp.version>4.9.3</okhttp.version>
+        <logging-interceptor.version>4.9.3</logging-interceptor.version>
+        <threetenbp.version>1.5.2</threetenbp.version>
+        <gson.version>2.8.9</gson.version>
+        <gson-fire.version>1.8.5</gson-fire.version>
+        <apache.common.collections.version>3.2.2</apache.common.collections.version>
+        <apache.common.beanutils.version>1.9.4</apache.common.beanutils.version>
+        <jaxb2-commons.lang.version>2.4</jaxb2-commons.lang.version>
+        <jaxb2-commons.basics.version>1.11.1</jaxb2-commons.basics.version>
+        <junit.version>4.13.2</junit.version>
+        <spring.test.version>5.3.23</spring.test.version>
+        <spring.amqp.version>2.7.4</spring.amqp.version>
+        <spring.rabbit.test.version>2.4.7</spring.rabbit.test.version>
     </properties>
 
     <distributionManagement>
@@ -78,6 +111,195 @@
                 <version>${fi.solita.clamav}</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.apache.ws.xmlschema</groupId>
+                <artifactId>xmlschema-core</artifactId>
+                <version>${xmlschema-core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.ws.commons.schema</groupId>
+                <artifactId>XmlSchema</artifactId>
+                <version>${xmlschema.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+                <version>${spring.actuator.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-security</artifactId>
+                <version>${spring.security.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-validation</artifactId>
+                <version>${spring.validation.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.ws</groupId>
+                <artifactId>spring-ws-test</artifactId>
+                <scope>test</scope>
+                <version>${spring.ws.test.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-devtools</artifactId>
+                <scope>runtime</scope>
+                <optional>true</optional>
+                <version>${spring.devtools.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+                <optional>true</optional>
+                <version>${spring.configuration.processor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <optional>true</optional>
+                <version>${lombok.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-test</artifactId>
+                <scope>test</scope>
+                <version>${spring.starter.test.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.security</groupId>
+                <artifactId>spring-security-test</artifactId>
+                <scope>test</scope>
+                <version>${spring.security.test.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-logging</artifactId>
+                <version>${spring.logging.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.datatype</groupId>
+                <artifactId>jackson-datatype-jsr310</artifactId>
+                <version>${jackson.datatype.jsr310.version}</version>
+            </dependency>
+
+            <!-- Splunk logging -->
+            <dependency>
+                <groupId>com.splunk.logging</groupId>
+                <artifactId>splunk-library-javalogging</artifactId>
+                <version>${splunk.javalogging.version}</version>
+                <scope>runtime</scope>
+            </dependency>
+
+            <!-- Logging framework -->
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-classic</artifactId>
+                <version>${logback.classic.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>ch.qos.logback</groupId>
+                <artifactId>logback-core</artifactId>
+                <version>${logback.core.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>${spring.starter.web.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web-services</artifactId>
+                <version>${spring.starter.web-services.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework.boot</groupId>
+                        <artifactId>spring-boot-starter-tomcat</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>wsdl4j</groupId>
+                <artifactId>wsdl4j</artifactId>
+                <version>${wsdl4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>${jaxb-runtime.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>okhttp</artifactId>
+                <version>${okhttp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.squareup.okhttp3</groupId>
+                <artifactId>logging-interceptor</artifactId>
+                <version>${logging-interceptor.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.threeten</groupId>
+                <artifactId>threetenbp</artifactId>
+                <version>${threetenbp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.gsonfire</groupId>
+                <artifactId>gson-fire</artifactId>
+                <version>${gson-fire.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-collections</groupId>
+                <artifactId>commons-collections</artifactId>
+                <version>${apache.common.collections.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>commons-beanutils</groupId>
+                <artifactId>commons-beanutils</artifactId>
+                <version>${apache.common.beanutils.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jvnet.jaxb2_commons</groupId>
+                <artifactId>jaxb2-commons-lang</artifactId>
+                <version>${jaxb2-commons.lang.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jvnet.jaxb2_commons</groupId>
+                <artifactId>jaxb2-basics</artifactId>
+                <version>${jaxb2-commons.basics.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>${junit.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-test</artifactId>
+                <version>${spring.test.version}</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-amqp</artifactId>
+                <version>${spring.amqp.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.amqp</groupId>
+                <artifactId>spring-rabbit-test</artifactId>
+                <scope>test</scope>
+                <version>${spring.rabbit.test.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -97,7 +319,6 @@
                                 <include>*.md</include>
                                 <include>.gitignore</include>
                             </includes>
-                            g
                             <!-- define the steps to apply to those files -->
                             <trimTrailingWhitespace/>
                             <endWithNewline/>
