--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.5.12</version>
+        <version>2.5.14</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>ca.bc.gov.open</groupId>
@@ -14,10 +14,7 @@
     <version>1.0.0</version>
     <name>jag-crdp</name>
     <description>CRDP Application</description>
-    <properties>
-        <java.version>11</java.version>
-        <log4j2.version>2.17.1</log4j2.version>
-    </properties>
+
     <repositories>
         <repository>
             <id>splunk-artifactory</id>
@@ -25,6 +22,11 @@
             <url>https://splunk.jfrog.io/splunk/ext-releases-local</url>
         </repository>
     </repositories>
+
+    <properties>
+        <java.version>11</java.version>
+        <log4j2.version>2.17.1</log4j2.version>
+    </properties>
 
     <modules>
         <module>libs/crdp-starters-bom</module>
@@ -73,6 +75,7 @@
         <profile>
             <id>transmit-receiver</id>
             <modules>
+                <module>libs/crdp-starters-bom</module>
                 <module>jag-crdp-transmit-receiver</module>
                 <module>jag-crdp-transmit-models</module>
                 <module>jag-crdp-common-models</module>
@@ -91,6 +94,7 @@
         <profile>
             <id>process-scanner</id>
             <modules>
+                <module>libs/crdp-starters-bom</module>
                 <module>jag-crdp-process-scanner</module>
                 <module>jag-crdp-process-models</module>
                 <module>jag-crdp-common-models</module>
@@ -99,6 +103,7 @@
         <profile>
             <id>process-transformer</id>
             <modules>
+                <module>libs/crdp-starters-bom</module>
                 <module>jag-crdp-process-transformer</module>
                 <module>jag-crdp-process-models</module>
                 <module>jag-crdp-common-models</module>
@@ -151,7 +156,6 @@
                     </execution>
                 </executions>
             </plugin>
-
         </plugins>
     </build>
 </project>
