upgrade jackson-databind to 2.13.4.2

--- a/libs/crdp-starters-bom/pom.xml
+++ b/libs/crdp-starters-bom/pom.xml
@@ -31,6 +31,7 @@
         <spring.security.test.version>5.7.3</spring.security.test.version>
         <spring.logging.version>2.7.5</spring.logging.version>
         <jackson.datatype.jsr310.version>2.13.4</jackson.datatype.jsr310.version>
+        <jackson.databind.version>2.13.4.2</jackson.databind.version>
         <splunk.javalogging.version>1.11.1</splunk.javalogging.version>
         <logback.classic.version>1.2.11</logback.classic.version>
         <logback.core.version>1.2.11</logback.core.version>
@@ -188,6 +189,11 @@
                 <groupId>com.fasterxml.jackson.datatype</groupId>
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>${jackson.datatype.jsr310.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.fasterxml.jackson.core</groupId>
+                <artifactId>jackson-databind</artifactId>
+                <version>${jackson.databind.version}</version>
             </dependency>
 
             <!-- Splunk logging -->
