--- a/jag-crdp-process-scanner/pom.xml
+++ b/jag-crdp-process-scanner/pom.xml
@@ -94,7 +94,10 @@
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
 
         <!-- Splunk logging -->
         <dependency>
