--- a/jag-crdp-process-transformer/Dockerfile
+++ b/jag-crdp-process-transformer/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre-alpine
+
+RUN apk upgrade expat
 
 COPY ./target/jag-crdp-process-transformer.jar jag-crdp-process-transformer.jar
 
