--- a/jag-crdp-transmit-receiver/Dockerfile
+++ b/jag-crdp-transmit-receiver/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre-alpine
+
+RUN apk upgrade expat
 
 COPY ./target/jag-crdp-transmit-receiver.jar jag-crdp-transmit-receiver.jar
 
