--- a/jag-crdp-transmit-sender/Dockerfile
+++ b/jag-crdp-transmit-sender/Dockerfile
@@ -1,4 +1,6 @@
-FROM openjdk:11-jre-slim
+FROM eclipse-temurin:11-jre-alpine
+
+RUN apk upgrade expat
 
 COPY ./target/jag-crdp-transmit-sender.jar jag-crdp-transmit-sender.jar
 
